[package]
name = "sudoku"
version = "0.1.0"
edition = "2021"
description = "Sudoku!"
[package.metadata.bundle]
identifier = "com.jah2488.sudoku"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy-inspector-egui = "0.17.0"
rand = "0.8.5"
